k8s/namespace-and-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitgenie
  labels:
    name: gitgenie
